 
plugins {
  id 'application'
  id 'org.openjfx.javafxplugin' version '0.1.0'
  id 'groovy'

}

java {
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
	sourceSets.main.java.srcDirs = ["src/main/java"]
	sourceSets.test.java.srcDirs = ["src/test/java"] 	
}

task versionTxt()  {
    doLast {
        new File("${projectDir}/src/main/resources" , "version.txt").text = new Date().format('yyyyMMdd-HHmmss')
    }
}
 

compileJava {
	dependsOn versionTxt 
}

repositories {
	mavenCentral()
    maven {
        url = uri("https://dev-iesl.cs.umass.edu/nexus/content/repositories/releases/")
    }
}


javafx {
    version = "21" // v17 has a scrollto bug (we had v16 previously)
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.web', 'javafx.graphics', 'javafx.base', 'javafx.swing']
}

application {
    mainClass = 'cre.CitedReferencesExplorerFX' 
	// mainClass = 'cre.Script' 
	
}

test {
	
	jvmArgs = ['-Xmx6144M']	
  filter {
    excludeTestsMatching "cre.FileFormats"
	excludeTestsMatching "cre.IndicatorsExample"
    excludeTestsMatching "cre.StorageEngine"
    excludeTestsMatching "cre.StorageEngineShort"
	excludeTestsMatching "cre.RunScript"
   }
} 

tasks.register('testCRIndicators', Test) {
	description = 'Runs the CR indicator regression tests.'
	group = 'verification'
	testClassesDirs = sourceSets.test.output.classesDirs
	classpath = sourceSets.test.runtimeClasspath
	jvmArgs = ['-Xmx6144M']
	filter {
		includeTestsMatching 'cre.CRIndicatorRegressionTest'
		includeTestsMatching 'cre.IndicatorsExample'
	}
}

tasks.register('testStorageEngines', Test) {
	description = 'Runs the storage engine equivalence tests.'
	group = 'verification'
	testClassesDirs = sourceSets.test.output.classesDirs
	classpath = sourceSets.test.runtimeClasspath
	jvmArgs = ['-Xmx6144M']
	filter {
		includeTestsMatching 'cre.StorageEngine'
		includeTestsMatching 'cre.StorageEngineShort'
	}
}


tasks.withType(JavaExec) {
    jvmArgs = ['-Xmx6144M']
}

dependencies {
	/* REMOVED Lucene Search due to module problems
	compile group: 'org.apache.lucene', name: 'lucene-core', version: '8.4.0'
	compile group: 'org.apache.lucene', name: 'lucene-queryparser', version: '8.4.0'
    */
    
	// TODO: Versionen überprüfen und ggf. aktualisieren
    implementation 'org.codehaus.groovy:groovy-all:3.0.25' 

    implementation 'com.github.mpkorstanje:simmetrics-core:4.1.1'
	implementation 'javax.json:javax.json-api:1.1'
	implementation 'org.glassfish:javax.json:1.1'
	implementation 'com.opencsv:opencsv:3.9'
	implementation 'org.jfree:jfreechart:1.0.19'
	implementation 'org.jfree:jfreechart-fx:1.0.1'
	implementation 'commons-io:commons-io:2.6'
	implementation 'com.h2database:h2:2.1.214'
	implementation 'org.postgresql:postgresql:42.6.0'
	implementation 'org.yaml:snakeyaml:1.24'
	implementation 'org.xerial:sqlite-jdbc:3.50.3.0'
	
 	runtimeOnly "org.openjfx:javafx-graphics:$javafx.version:win"
	runtimeOnly "org.openjfx:javafx-graphics:$javafx.version:linux"
	runtimeOnly "org.openjfx:javafx-graphics:$javafx.version:mac"
 	runtimeOnly "org.openjfx:javafx-controls:$javafx.version:win"
 	runtimeOnly "org.openjfx:javafx-controls:$javafx.version:linux"
 	runtimeOnly "org.openjfx:javafx-controls:$javafx.version:mac"
 	runtimeOnly "org.openjfx:javafx-fxml:$javafx.version:win"
 	runtimeOnly "org.openjfx:javafx-fxml:$javafx.version:linux"
 	runtimeOnly "org.openjfx:javafx-fxml:$javafx.version:mac"
 	runtimeOnly "org.openjfx:javafx-web:$javafx.version:win"
 	runtimeOnly "org.openjfx:javafx-web:$javafx.version:linux"
 	runtimeOnly "org.openjfx:javafx-web:$javafx.version:mac"
 	runtimeOnly "org.openjfx:javafx-base:$javafx.version:win"
 	runtimeOnly "org.openjfx:javafx-base:$javafx.version:linux"
 	runtimeOnly "org.openjfx:javafx-base:$javafx.version:mac"
 	runtimeOnly "org.openjfx:javafx-swing:$javafx.version:win"
 	runtimeOnly "org.openjfx:javafx-swing:$javafx.version:linux"
 	runtimeOnly "org.openjfx:javafx-swing:$javafx.version:mac"


    testCompileOnly 'org.apiguardian:apiguardian-api:1.0.0'

	// testImplementation('org.junit.jupiter:junit-jupiter-api:5.4.2')
    // testRuntime('org.junit.jupiter:junit-jupiter-engine:5.4.2')
}
 

jar {
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    manifest {
        attributes 'Main-Class': 'cre.CitedReferencesExplorer'
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }

	archiveBaseName = 'crexplorer'
}

